--- a/symphony.html
+++ b/symphony.html
@@ -138,7 +138,7 @@
 	</footer>
 	<!--	/footer-->
 
-	<script src="//code.jquery.com/jquery-3.2.1.js"></script>
+	<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
 	<script src="js/symphony.js"></script>
 </body>
 
